@@ -1,6 +1,6 @@
 [FaqMgr]
 requiresAuth    = false
-commentsEnabled = false
+commentsEnabled = true
 
 [AdminFaqMgr]
 requiresAuth    = true
