@@ -1,5 +1,6 @@
 [ArticleViewMgr]
 requiresAuth    = false
+commentsEnabled = false
 
 [ArticleMgr]
 requiresAuth    = true
@@ -14,7 +15,7 @@ adminGuiAllowed = true
 zipDownloads    = true
 formatFileName	= true
 
-;note: you can just remove file types. 
+;note: you can just remove file types.
 ;for adding new stuff you have also to modify DocumentMgr.php
 allowedFileTypes = gif,jpeg,jpg,png,doc,rtf,txt,pdf,ppt,pps,xls,htm,html,csv
 
